tests/fixtures/invalid/float_bitand_int.py
# Cannot bitwise AND Float and Int
x: float = 1.0 & 1
